create route to create many questions
