# src/controller/question-controller.js
@@ -35,7 +35,23 @@ const getQuestion = async (req, res, next) => {
   }
 };
 
+const createManyQuestion = async (req, res, next) => {
+  try {
+    const result = await questionService.createManyQuestion(req.body, req.file);
+    res.status(201).json({
+      statusCode: 201,
+      status: "OK",
+      message: `success create ${result.count} question`,
+    });
+  } catch (error) {
+    next(error);
+  } finally {
+    await prisma.$disconnect();
+  }
+};
+
 export default {
   createQuestion,
   getQuestion,
+  createManyQuestion,
 };
